[gd_scene load_steps=19 format=3 uid="uid://dyjasjxoi31kg"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_ddm68"]
[ext_resource type="Texture2D" uid="uid://cyu461wyilqj7" path="res://art/spaceship/Main Ship/Main Ship - Bases/PNGs/Main Ship - Base - Full health.png" id="2_5t6by"]
[ext_resource type="Texture2D" uid="uid://clmafet1gigm" path="res://art/spaceship/Main Ship/Main Ship - Engines/PNGs/Main Ship - Engines - Base Engine.png" id="3_0r1c6"]
[ext_resource type="Texture2D" uid="uid://ciwo11eak8klu" path="res://art/spaceship/Main Ship/Main Ship - Engine Effects/PNGs/Main Ship - Engines - Supercharged Engine - Idle.png" id="4_ppnpw"]
[ext_resource type="Texture2D" uid="uid://dtjxt743uyocf" path="res://art/spaceship/Main Ship/Main Ship - Engine Effects/PNGs/Main Ship - Engines - Supercharged Engine - Spritesheet.png" id="5_4qmme"]
[ext_resource type="Script" path="res://components/rotate_component.gd" id="6_vcy64"]
[ext_resource type="Script" path="res://components/thrust_component.gd" id="7_32st1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ecst6"]
atlas = ExtResource("4_ppnpw")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk0dy"]
atlas = ExtResource("4_ppnpw")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqtr"]
atlas = ExtResource("4_ppnpw")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25pf"]
atlas = ExtResource("4_ppnpw")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_do84i"]
atlas = ExtResource("5_4qmme")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggxd5"]
atlas = ExtResource("5_4qmme")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jw1d"]
atlas = ExtResource("5_4qmme")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_78gvo"]
atlas = ExtResource("5_4qmme")
region = Rect2(96, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_tvi2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecst6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk0dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25pf")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do84i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggxd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jw1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78gvo")
}],
"loop": false,
"name": &"Thrust",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulyqg"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tucvk"]
size = Vector2(32, 32)

[node name="Player" type="RigidBody2D"]
linear_damp = 3.0
script = ExtResource("1_ddm68")

[node name="Ship" type="Sprite2D" parent="."]
z_index = 4
scale = Vector2(1.04167, 1.04167)
texture = ExtResource("2_5t6by")

[node name="Engine" type="Sprite2D" parent="Ship"]
z_index = 3
z_as_relative = false
position = Vector2(0, 3.75)
texture = ExtResource("3_0r1c6")

[node name="ThrustAnimation" type="AnimatedSprite2D" parent="Ship/Engine"]
position = Vector2(0, -1.25)
sprite_frames = SubResource("SpriteFrames_tvi2c")
animation = &"Idle"
autoplay = "Idle"

[node name="RotateComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_vcy64")
sprite = NodePath("../Ship")

[node name="ThrustComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "physics_body", "thrust_animation")]
script = ExtResource("7_32st1")
sprite = NodePath("../Ship")
physics_body = NodePath("..")
thrust_speed = 350.0
thrust_animation = NodePath("../Ship/Engine/ThrustAnimation")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-5.96046e-07, 2)
scale = Vector2(1.6, 1.6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ulyqg")

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
position = Vector2(0, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_tucvk")

[connection signal="animation_finished" from="Ship/Engine/ThrustAnimation" to="ThrustComponent" method="_on_thrust_animation_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
